# epub_tool

./: .black  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Epub_Tool_Console.py  Epub_Tool_TKUI.py  Epub_Tool_TKUI_OLD.py  LICENSE  README  README.md  epub_tool.py  epub_tool_TKUI.py  package-lock.json  package.json  pyinstaller  pyinstaller.sh  pyinstallerForMac.sh  pyinstallerForWindows.txt  requirements-base.txt  requirements-build-ocr.txt  requirements-paddle.txt  requirements.txt  重构epub为规范格式_v2.8.3.py  重构epub为规范格式_v2.8.3.pyz  重构epub并加入文件名混淆.py  重构epub并加入文件名混淆.pyz  重构epub并反文件名混淆.py  重构epub并反文件名混淆.pyz
build_tool/: build_python_sidecar.py  build_tauri.py  configure_ocr_bundle_variant.py  prepare_bundle_resources.py  prepare_ocr_models.py  prepare_ocr_onnx_models.py  pyinstallerForMac.sh  pyinstallerForUbuntu.sh  pyinstallerForWindows.txt  verify_ocr_onnx_models.py
doc/: BUILD_AND_BUNDLE.md  CLI_USAGE.md  LOCAL_DEVELOPMENT.md  README.md  TASK_PROTOCOL.md  TAURI_PYTHON_BRIDGE.md  TODO.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
python_backend/: __init__.py  cli.py  epub_metadata.py  epub_workspace.py  json_output.py  protocol.py  task_runner.py
requirements/: requirements-base.txt  requirements.txt
scripts/: build_python_sidecar.py  (+7 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bundle-resources/ocr-models/PP-OCRv6_medium_rec_onnx/: inference.yml
src-tauri/bundle-resources/ocr-models/PP-OCRv6_small_rec_onnx/: inference.yml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+73 files in other folders)
